[package]
name = "kbs-types"
description = "Rust (de)serializable types for KBS"
version = "0.15.0"
authors = ["Sergio Lopez <slp@redhat.com>"]
edition = "2021"
repository = "https://github.com/virtee/kbs-types"
license = "Apache-2.0"

[features]
default = [ "std" ]
alloc = ["base64/alloc",  "serde/alloc", "serde_json/alloc" ]
std = ["base64/std", "serde/std", "serde_json/std", "sha2/std", "sm3/std", "strum/std", "thiserror/std", "dep:ear"]

[dependencies]
base64 = { version = "0.22.1", default-features = false }
ear = { git = "https://github.com/veraison/rust-ear", rev = "4c25640e0f57b82f7851602264a85e7da04e2634", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
sm3 = { version = "0.4.2", default-features = false }
strum = { version = "0.27", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.3", default-features = false }
